--- a/Codes/index.html
+++ b/Codes/index.html
@@ -7,7 +7,11 @@
 </head>
 <body>
     <h1> hello</h1>
-    <button id="clickMe">Click Me</button>
+    <!-- lecture 14 -->
+    <!-- <button id="clickMe">Click Me</button>  -->
+    <!-- lecture 26 -->
+    <button onclick="alert(this)">Click Me</button>
+    <p>The above button says Object HTML ButtonElement </p>
 </body>
-<script src="Lecture14.js"></script>
+<script src="Lecture26.js"></script>
 </html>
